--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3721,7 +3721,7 @@
   "search": "搜寻",
   "pending": "待处理",
   "unknown": "未知",
-  "crafting.selectIngredients": "选择食材",
+  "crafting.selectIngredients": "选择材料",
   "crafting.readyToCollect": "准备收集",
   "crafting.noRecipe": "没有食谱",
   "ready": "准备好了",
