--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2782,45 +2782,45 @@
   "npcDialogues.cornwell.noOrder2": "哦，看来我现在不需要你的服务。但是不要担心； Sunflower Land 的历史页无休止地翻转，新的任务肯定会浮出水面。",
   "npcDialogues.cornwell.noOrder3": "啊，很抱歉，但我现在没什么要你履行的。但别慌；作为知识探寻者的你，时机成熟，自有道路会引领你完成新的任务。",
   "npcDialogues.cornwell.noOrder4": "啊，看来你目前还没有收到我的任何送货订单。但是切勿失去希望；你的好奇心将很快引导你到 Sunflower Land 更多激动人心的新任务面前。",
-  "npcDialogues.pumpkinPete.intro1": "我一直在等你，我的朋友！你准备好我的订单了吗？",
-  "npcDialogues.pumpkinPete.intro2": "嘿，南瓜！我一直在忙着引导 Bumpkins 绕过广场？你收到我的订单了吗？",
-  "npcDialogues.pumpkinPete.intro3": "问候，朋友！今天的广场上热闹非凡。你设法收到我的订单了吗？",
-  "npcDialogues.pumpkinPete.intro4": "你好，冒险家们！是什么让你来到我的简陋住所？你收到我的订单了吗？",
-  "npcDialogues.pumpkinPete.intro5": "嘿，嘿！欢迎来到广场？你设法找到我需要的东西了吗？",
+  "npcDialogues.pumpkinPete.intro1": "我一直在等你，朋友！你准备好我的订单了吗？",
+  "npcDialogues.pumpkinPete.intro2": "嘿，小南瓜！我一直忙着给 Bumpkins 在广场做向导？你收到我的订单了吗？",
+  "npcDialogues.pumpkinPete.intro3": "敬礼，朋友！广场今天热闹非凡。你有收到我的订单吗？",
+  "npcDialogues.pumpkinPete.intro4": "你好呀，冒险家同僚！是什么领你来我的小小陋室？你收到我的订单了吗？",
+  "npcDialogues.pumpkinPete.intro5": "嘿，嘿！欢迎来到广场？你想办法找来我需要的东西了吗？",
   "npcDialogues.pumpkinPete.positiveDelivery1": "万岁！你带的正是我需要的东西。你是真正的广场英雄！",
-  "npcDialogues.pumpkinPete.positiveDelivery2": "Pumpkin-tastic！你有我需要的东西。你正在让我们的小社区变得更美好！",
-  "npcDialogues.pumpkinPete.positiveDelivery3": "欢乐的种子！你带的正是我需要的东西。广场很幸运有你！",
-  "npcDialogues.pumpkinPete.positiveDelivery4": "太棒了！你带着我想要的东西来了。你的善良在我们的广场上散布阳光！",
-  "npcDialogues.pumpkinPete.positiveDelivery5": "哦，欢乐的南瓜种子！你给我带来的正是我需要的东西。广场感谢你的帮助！",
-  "npcDialogues.pumpkinPete.negativeDelivery1": "哦，不是。看来你没有我要找的东西。不过别担心。我相信你。找到后再回来！",
-  "npcDialogues.pumpkinPete.negativeDelivery2": "啊，糟透了！你没有我现在要找的东西。不过，请继续探索！也许下次吧。",
-  "npcDialogues.pumpkinPete.negativeDelivery3": "哦，悲伤的种子！你没有我要找的东西。但是不要放弃；每天都有新的机会绽放！",
+  "npcDialogues.pumpkinPete.positiveDelivery2": "南瓜顶呱呱！你刚好有我需要的东西。你正在将我们的小社区打造得更美好！",
+  "npcDialogues.pumpkinPete.positiveDelivery3": "欢乐萌芽！你带的正是我需要的东西。广场很幸运有你！",
+  "npcDialogues.pumpkinPete.positiveDelivery4": "太棒了！你带着我恰好想要的东西来了。你的善心在我们广场上散发阳光！",
+  "npcDialogues.pumpkinPete.positiveDelivery5": "哦，欢乐南瓜顶呱呱！你给我带来的正是我需要的东西。广场感谢你的帮助！",
+  "npcDialogues.pumpkinPete.negativeDelivery1": "噢，不。看来你没有我要找的东西。不过别担心。我相信你。等找到再回来吧！",
+  "npcDialogues.pumpkinPete.negativeDelivery2": "啊，糟透了！你没有我现在要找的东西。不过，请继续探索！也许下次就好了。",
+  "npcDialogues.pumpkinPete.negativeDelivery3": "哦，悲伤之种！你没有我要找的东西。但不要放弃；每天都有新机会绽放！",
   "npcDialogues.pumpkinPete.negativeDelivery4": "哦，干……萝卜！你没有我现在要找的东西。不过，请继续探索！我相信你会找到的。",
-  "npcDialogues.pumpkinPete.negativeDelivery5": "哎哟 Daisy！你没有我要找的东西。但别担心，我的朋友。继续探索，当你找到它时我们会庆祝的。",
-  "npcDialogues.pumpkinPete.noOrder1": "啊，我的朋友，看来我目前没有有效的订单给你。但是别慌！我一直在这里提供指导，露出友好的笑容。",
-  "npcDialogues.pumpkinPete.noOrder2": "哦，朋友，今天没有有效的订单。但是不用担心！随意探索广场，如果你需要任何帮助，我是你值得信赖的 Bumpkin。",
-  "npcDialogues.peggy.intro1": "你好，亲爱的！你是来给我带点好吃的吗？我等不及要看看你煮了什么！",
-  "npcDialogues.peggy.intro2": "好吧，在我的饼干上涂黄油！你为我准备好那些美味的零食了吗？我已经准备好享受一些美味的乐趣了！",
-  "npcDialogues.peggy.intro3": "你好，伙伴！我一直在等着看你给我带来了什么美味的创作。准备好分享一些烹饪乐趣了吗？",
-  "npcDialogues.peggy.intro4": "你好，亲爱的！在煮什么？你给我带了一些我梦寐以求的令人垂涎的菜肴吗？",
-  "npcDialogues.peggy.intro5": "哦，你好！我很高兴看到你准备了什么美味佳肴。你收到我的订单了吗？",
+  "npcDialogues.pumpkinPete.negativeDelivery5": "哎哟喂哟！你没有我要找的东西。但别担心，朋友。继续探索，你找到时我们会好好庆祝的。",
+  "npcDialogues.pumpkinPete.noOrder1": "啊，我的朋友，看来我目前没有生效订单给你。但是别慌！我会一直在这里提供指引，展现友好微笑。",
+  "npcDialogues.pumpkinPete.noOrder2": "哦，朋友，今天没有生效订单。但是不用担心！广场随便逛逛，如果你需要任何帮助，我都是你忠实可靠的乡包佬。",
+  "npcDialogues.peggy.intro1": "你好，亲爱的！你是给我带好吃的来了吗？我等不及看看你煮什么了！",
+  "npcDialogues.peggy.intro2": "哇，黄油配脆饼！你都为我准备好那些美味零食了吗？我已经准备好纵享美味乐趣了！",
+  "npcDialogues.peggy.intro3": "哈喽喂，伙伴！我一直在期待着你会给我带来什么美食创作。准备好分享一些烹饪乐趣了吗？",
+  "npcDialogues.peggy.intro4": "嘿呀，亲爱的！在煮什么？你给我带来些我梦寐以求、垂涎三尺的菜肴了吗？",
+  "npcDialogues.peggy.intro5": "哦，你好呀！我很高兴终于能看到你准备了什么美味佳肴。你收到我的订单了吗？",
   "npcDialogues.peggy.positiveDelivery1": "好吃极了！你煮的正是我渴望的东西。你是广场上最好的厨师！",
-  "npcDialogues.peggy.positiveDelivery2": "哦，我的味蕾在跳舞！你已经交付了完美的菜肴。你是烹饪巨星！",
-  "npcDialogues.peggy.positiveDelivery3": "实现了美味！你已经完全满足了我的需求。你是一个真正的厨房英雄！",
-  "npcDialogues.peggy.positiveDelivery4": "神奇的盛宴！你给我带来了我所希望的东西。整个广场都会喜欢这个！",
-  "npcDialogues.peggy.positiveDelivery5": "哇，真是一种享受！你已经煮好并送来了一顿完美的饭菜。你让我过得愉快，广场也是！",
-  "npcDialogues.peggy.negativeDelivery1": "哦亲爱的，看来这不完全是我所需要的。不过不用担心！继续做饭，尽可能把它带回来。",
-  "npcDialogues.peggy.negativeDelivery2": "哎呀，这不太正确。但是不要担心！再煮一道菜然后很快回来！",
-  "npcDialogues.peggy.negativeDelivery3": "这不是我所希望的，但不要放弃！保持这些烹饪技巧敏锐，稍后再试。",
-  "npcDialogues.peggy.negativeDelivery4": "哦，这不完全是我渴望的菜。继续探索你的食谱，尽可能给我带点其他东西！",
-  "npcDialogues.peggy.negativeDelivery5": "不完全是我吃的那顿饭，但别担心！尝试烹饪其他东西，然后回来做下一个烹饪创作。",
-  "npcDialogues.peggy.noOrder1": "啊，看来我目前没有有效的订单给你。但是可以随意探索和在广场上大放异彩！",
-  "npcDialogues.peggy.noOrder2": "今天没有你当前的订单，但不要让它阻止你！如果你需要任何烹饪建议或者只是想聊一聊，我在这里！",
-  "npcDialogues.pumpkinPete.reward": "衷心感谢您的配送。这是对你的感激之情。",
-  "npcDialogues.pumpkinPete.flowerIntro": "你见过黄色宇宙的优雅吗？我想要一个...",
-  "npcDialogues.pumpkinPete.averageFlower": "不完全是我的想法，但它很迷人。谢谢。",
-  "npcDialogues.pumpkinPete.badFlower": "这不是我所希望的。也许你可以找到更合适的？",
-  "npcDialogues.pumpkinPete.goodFlower": "这个黄色宇宙太棒了！谢谢你把它带给我。",
+  "npcDialogues.peggy.positiveDelivery2": "哦，我的味蕾在跳舞！你已经交付了完美的菜肴。你简直是烹饪巨星！",
+  "npcDialogues.peggy.positiveDelivery3": "美味降世！你已经完全打发好了我的需求。你是真正的厨房英雄！",
+  "npcDialogues.peggy.positiveDelivery4": "八珍盛宴！你给我带来了我恰巧希望的东西。整个广场都会喜欢！",
+  "npcDialogues.peggy.positiveDelivery5": "哇，真是享受！你已经煮好并送来了完美的饭菜。你为我今日带来了欢愉，广场也是！",
+  "npcDialogues.peggy.negativeDelivery1": "哦亲爱的，看来这不完全是我所需要的。不过不用担心！继续做饭，做好了再带过来吧。",
+  "npcDialogues.peggy.negativeDelivery2": "哎呀，这不太对。但是不用担心！煮多一道菜再早点回来吧！",
+  "npcDialogues.peggy.negativeDelivery3": "这不是我希望要的，但不要放弃！保持锻炼烹饪技巧，稍后再试吧。",
+  "npcDialogues.peggy.negativeDelivery4": "哦，这不完全是我渴望的菜。继续探索你的食谱，能做出其他新东西再多带给我吧！",
+  "npcDialogues.peggy.negativeDelivery5": "不完全是我想要的那种菜，但别担心！试试烹饪其他东西，带上下一个烹饪佳作再回来吧。",
+  "npcDialogues.peggy.noOrder1": "啊，看来我目前没有生效订单给你。但你可以随心所欲在广场上探索并掀起你的烹饪狂潮！",
+  "npcDialogues.peggy.noOrder2": "今天没有给你的订单，但别因此停下脚步！如果你需要任何烹饪建议或者只是想聊一聊，我都在这里！",
+  "npcDialogues.pumpkinPete.reward": "衷心感谢你的送货。感激薄礼还请收下。",
+  "npcDialogues.pumpkinPete.flowerIntro": "你见过黄波斯菊的优雅吗？我想要一个……",
+  "npcDialogues.pumpkinPete.averageFlower": "不完全是我所想的，但很迷人。谢谢。",
+  "npcDialogues.pumpkinPete.badFlower": "这不是我想要的。也许你可以找到更合适的？",
+  "npcDialogues.pumpkinPete.goodFlower": "这个黄波斯菊太棒了！谢谢你把它带给我。",
   "npcDialogues.betty.reward": "我很感激你的贴心礼物。这里有一些东西可以表达我的感激之情。",
   "npcDialogues.betty.flowerIntro": "你能想象红色、黄色、紫色、白色或蓝色三色三色菊的美丽吗？我渴望一个...",
   "npcDialogues.betty.averageFlower": "不完全是我所期望的，但是很可爱。谢谢。",
@@ -2840,7 +2840,7 @@
   "npcDialogues.finn.flowerIntro": "我渴望一个漂亮的白色或蓝色的宇宙。你能找到一个吗？",
   "npcDialogues.finn.averageFlower": "不完全是我所希望的，但很令人高兴。谢谢。",
   "npcDialogues.finn.badFlower": "这朵花不太符合我的期望。也许再试一次？",
-  "npcDialogues.finn.goodFlower": "这个 Cosmos 太棒了！谢谢你把它带给我。",
+  "npcDialogues.finn.goodFlower": "这个波斯菊太棒了！谢谢你把它带给我。",
   "npcDialogues.finley.reward": "感谢你的努力。以下是对您的配送表示感谢的一小段感谢。",
   "npcDialogues.finley.flowerIntro": "一朵可爱的水仙花，就像我正在想的那样，会让我的生活更加美好。你看过一个吗？",
   "npcDialogues.finley.averageFlower": "这不完全是我的想法，但它非常迷人。谢谢。",
