[FEAT] Add cycling UI for max level animals

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3772,6 +3772,7 @@
   "wakesIn": "Wakes in:",
   "animal.noFoodMessage": "No food selected",
   "levelUp": "Level Up!",
+  "levelUpMax": "Max Level!",
   "unknown": "Unknown",
   "crafting.selectIngredients": "Select ingredients",
   "crafting.readyToCollect": "Ready to collect",
