--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4162,9 +4162,9 @@
   "description.mooVer.boost": "+0.25 Leather",
   "description.swissWhiskers.boost": "+500 Cheese Recipe XP",
   "description.cluckulator.boost": "-25% Feed to Chicken",
-  "description.alien.chicken": "+0.1 Feathers",
-  "description.toxic.tuft": "+0.1 Merino Wool",
-  "description.mootant": "+0.1 Leather",
+  "description.alien.chicken.boost": "+0.1 Feathers",
+  "description.toxic.tuft.boost": "+0.1 Merino Wool",
+  "description.mootant.boost": "+0.1 Leather",
   "chores.ended": "All that time tellin Bumpkins what to do......I'm tired. I think I need a vacation.",
   "digby.closed": "Desert closed",
   "digby.holiday": "The desert is closed today. Come back later.",
