update basic bear description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -780,7 +780,7 @@
   "description.potted.potato": "Potato blood runs through your Bumpkin.",
   "description.potted.pumpkin": "Pumpkins for Bumpkins",
   "description.cactus": "Saves water and makes your farm look stunning!",
-  "description.basic.bear": "A basic bear. Use this at Goblin Retreat to build a bear!",
+  "description.basic.bear": "A basic bear.",
   "description.bonnies.tombstone": "A spooky addition to any farm, Bonnie's Human Tombstone will send shivers down your spine.",
   "description.grubnashs.tombstone": "Add some mischievous charm with Grubnash's Goblin Tombstone.",
   "description.town.sign": "Show your farm ID with pride!",
