[FIX] Fix Duplicate Terms for Bull Run Mutants + Update Basic Bear Description (#4675)
* [FIX] Fix Duplicate Terms for Bull Run Mutants + Update Basic Bear Description

* update basic bear description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -780,7 +780,7 @@
   "description.potted.potato": "Potato blood runs through your Bumpkin.",
   "description.potted.pumpkin": "Pumpkins for Bumpkins",
   "description.cactus": "Saves water and makes your farm look stunning!",
-  "description.basic.bear": "A basic bear. Use this at Goblin Retreat to build a bear!",
+  "description.basic.bear": "A basic bear.",
   "description.bonnies.tombstone": "A spooky addition to any farm, Bonnie's Human Tombstone will send shivers down your spine.",
   "description.grubnashs.tombstone": "Add some mischievous charm with Grubnash's Goblin Tombstone.",
   "description.town.sign": "Show your farm ID with pride!",
@@ -4162,9 +4162,9 @@
   "description.mooVer.boost": "+0.25 Leather",
   "description.swissWhiskers.boost": "+500 Cheese Recipe XP",
   "description.cluckulator.boost": "-25% Feed to Chicken",
-  "description.alien.chicken": "+0.1 Feathers",
-  "description.toxic.tuft": "+0.1 Merino Wool",
-  "description.mootant": "+0.1 Leather",
+  "description.alien.chicken.boost": "+0.1 Feathers",
+  "description.toxic.tuft.boost": "+0.1 Merino Wool",
+  "description.mootant.boost": "+0.1 Leather",
   "chores.ended": "All that time tellin Bumpkins what to do......I'm tired. I think I need a vacation.",
   "digby.closed": "Desert closed",
   "digby.holiday": "The desert is closed today. Come back later.",
