[CHORE] Update Community Coin Description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1596,7 +1596,7 @@
   "description.sunflower.key": "The Sunflower Key",
   "description.ancient.goblin.sword": "An Ancient Goblin Sword",
   "description.ancient.human.warhammer": "An Ancient Human Warhammer",
-  "description.community.coin": "(WIP) A valued coin that can be exchanged for rewards",
+  "description.community.coin": "(WIP) A valued coin reserved for future use in Sunflower Land.",
   "description.bud.seedling": "(LEGACY) A seedling to be exchanged for a free Bud NFT",
   "description.gold.pass": "(LEGACY) An exclusive pass that enables the holder to craft rare NFTs, trade, withdraw and access bonus content.",
   "description.rapid.growth": "(LEGACY) Apply to a crop to grow twice as fast",
