[CHORE] Update Metadata, Boosts and Descriptions for Old Animal Boosts

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -139,12 +139,12 @@
   "birdieplaza.seasonQuests": "This season has exciting quests, rare collectibles and exclusive wearables you can earn.",
   "birdieplaza.craftItems": "To obtain these rare items, you must collect {{seasonalTicket}}s and exchange them at Stella's Megastore or bid at the Auction House.",
   "description.speed.chicken.one": "Your chickens will now produce eggs 10% faster.",
-  "description.speed.chicken.two": "Produces eggs 10% faster",
-  "description.fat.chicken.one": "Your chickens will now require 10% less wheat per feed.",
-  "description.fat.chicken.two": "10% less wheat needed to feed a chicken",
-  "description.rich.chicken.one": "Your chickens will now yield 10% more eggs.",
-  "description.rich.chicken.two": "Yields 10% more eggs",
-  "description.ayam.cemani": "The rarest chicken in existence!",
+  "description.speed.chicken.two": "Produces eggs 10% faster.",
+  "description.fat.chicken.one": "Your chickens will now require 10% less food each time they are fed.",
+  "description.fat.chicken.two": "10% less food is needed to feed a chicken.",
+  "description.rich.chicken.one": "Your chickens will now yield 0.1 more eggs.",
+  "description.rich.chicken.two": "This mutant chicken adds a boost of +0.1 egg yield.",
+  "description.ayam.cemani": "The rarest chicken in Sunflower Land!",
   "description.el.pollo.veloz.one": "Your chickens will lay eggs 2 hours faster!",
   "description.el.pollo.veloz.two": "Give me those eggs, fast! Chickens sleep 2 hours shorter.",
   "description.banana.chicken": "A chicken that boosts bananas. What a world we live in.",
@@ -172,7 +172,7 @@
   "description.poppy": "The mystical corn kernel.",
   "description.poppy.1": "The mystical corn kernel. +0.1 Corn per harvest,",
   "description.victoria.sisters": "The pumpkin loving sisters",
-  "description.undead.rooster": "An unfortunate casualty of the war. 10% increased egg yield.",
+  "description.undead.rooster": "An unfortunate casualty of the war. +0.1 egg yield.",
   "description.observatory": "Explore the stars and improve scientific development",
   "description.engine.core": "The power of the sunflower",
   "description.time.warp.totem": "2x speed for crops, trees, fruits, cooking & minerals. Only lasts for 2 hours",
@@ -201,7 +201,7 @@
   "description.scary.mike": "Boost nearby Carrots, Cabbages, Soybeans, Beetroots, Cauliflowers and Parsnips",
   "description.laurie.chuckle.crow": "Boost nearby Eggplant, Corn, Radish, Wheat and Kale",
   "description.immortal.pear": "Increase the survival of your fruit patches.",
-  "description.bale": "Boost nearby chickens.",
+  "description.bale": "Boost Egg Yield.",
   "description.sir.goldensnout": "A royal member, Sir Goldensnout infuses your farm with sovereign prosperity through its golden manure.",
   "description.freya.fox": "Enchanting guardian, boosts pumpkin growth with her mystical charm. Harvest abundant pumpkins under her watchful gaze.",
   "description.queen.cornelia": "Command the regal power of Queen Cornelia and experience a magnificent Area of Effect boost to your corn production. +1 Corn.",
@@ -213,7 +213,7 @@
   "description.basic.scarecrow.boost": "-20% Growth Time",
   "description.scary.mike.boost": "+0.2 Medium Crops",
   "description.laurie.chuckle.crow.boost": "+0.2 Advanced Crops",
-  "description.bale.boost": "+0.2 Eggs",
+  "description.bale.boost": "+0.1 Egg",
   "description.immortal.pear.boost": "+1 Fruit Harvest per seed",
   "description.treasure.map.boost": "+20% Coins Treasure Bounty Sale Price",
   "description.poppy.boost": "+0.1 Corn",
@@ -257,14 +257,15 @@
   "description.lg.pumpkin.boost": "+0.3 Pumpkin",
   "description.lg.carrot.boost": "+0.2 Carrot",
   "description.lg.radish.boost": "+0.4 Radish",
-  "description.fat.chicken.boost": "-0.1 Wheat to Feed Chickens",
+  "description.fat.chicken.boost": "-10% Feed to Chicken",
   "description.rich.chicken.boost": "+0.1 Egg",
   "description.speed.chicken.boost": "-10% Egg Production Time",
   "description.ayam.cemani.boost": "+0.2 Egg",
-  "description.el.pollo.veloz.boost": "-4h Egg Production Time",
+  "description.el.pollo.veloz.boost": "-2h Egg Production Time",
   "description.rooster.boost": "2x Chance of Mutant Chicken",
   "description.undead.rooster.boost": "+0.1 Egg",
-  "description.chicken.coop.boost": "+1 Egg Yield; +5 Chicken Limit per Hen House",
+  "description.chicken.coop.boost": "+1 Egg; +5 Base Chickens; +5 Max Chickens per Hen House Upgrade",
+  "description.farm.dog.boost": "-25% Sheep Production Time",
   "description.gold.egg.boost": "Feed Chickens for free",
   "description.woody.beaver.boost": "+20% Wood",
   "description.apprentice.beaver.boost": "+20% Wood; -50% Tree Recovery Time",
@@ -494,7 +495,7 @@
   "description.michelin.stars": "High quality food, earn additional 5% SFL",
   "description.curer": "Consuming deli goods adds extra 15% exp",
   "description.stable.hand": "Animals produce 10% quicker",
-  "description.free.range": "Animals produce 10% more",
+  "description.free.range": "+0.1 Animal Produce",
   "description.horse.whisperer": "Increase chance of mutants",
   "description.buckaroo": "Chance of double drops",
   "bumpkinTrade.minLevel": "You must be level 10 to trade",
@@ -892,10 +893,10 @@
   "description.golden.cauliflower": "Doubles cauliflower yield",
   "description.mysterious.parsnip": "Parsnips grow 50% faster",
   "description.carrot.sword": "Increase chance of a mutant crop appearing",
-  "description.chicken.coop": "Collect 2x the amount of eggs",
+  "description.chicken.coop": "A chicken coop that can be used to raise chickens. Increase egg production with this rare coop.",
   "description.farm.cat": "Keep the rats away",
   "description.farm.dog": "Herd sheep with your farm dog",
-  "description.gold.egg": "Feed chickens without needing wheat",
+  "description.gold.egg": "A golden egg. What lays inside is known to be the bearer of good fortune.",
   "description.rooster": "Doubles the chance of dropping a mutant chicken",
   "description.chicken": "A reliable source of fresh eggs and soft feathers, this chicken happily does its part with the right care.",
   "description.cow": "This gentle cow provides fresh milk and durable leather. Keep it happy with plenty of food & affection.",
