--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -648,7 +648,7 @@
   "cropMachine.seeds": "Семена: {{amount}}",
   "cropMachine.growTime": "Время роста: {{time}}",
   "cropMachine.all": "Все",
-  "cropMachine.addSeedPack": "Добавить семя кучей",
+  "cropMachine.addSeedPack": "Добавить семена кучей",
   "cropMachine.notStartedYet": "Не запущено",
   "cropMachine.seedPacks": "Наборы семян",
   "cropMachine.readyCropPacks": "Готовые пакеты урожая",
@@ -3761,8 +3761,8 @@
   "chore.mine.10.crimstone": "Добудь 10 Кримстоуна",
   "chore.mine.12.crimstone": "Добудь 12 Кримстоуна",
   "chore.mine.15.crimstone": "Добудь 15 Кримстоуна",
-  "chore.craft.20.iron.pickaxe": "Сделай 20 Железных киркок",
-  "chore.craft.25.iron.pickaxe": "Сделай 25 Железных киркок",
+  "chore.craft.20.iron.pickaxe": "Сделай 20 Железных кирок",
+  "chore.craft.25.iron.pickaxe": "Сделай 25 Железных кирок",
   "chore.craft.15.gold.pickaxe": "Сделай 15 Золотых кирок",
   "chore.craft.20.gold.pickaxe": "Сделай 20 Золотых кирок",
   "chore.spend.35000.coins": "Потратьте 35 000 монет",
@@ -3796,8 +3796,8 @@
   "chore.harvest.240.radishes": "Собери 240 редиски",
   "chore.harvest.200.wheat": "Собери 200 пшеницы",
   "chore.harvest.240.wheat": "Собери 240 пшеницы",
-  "chore.harvest.175.kale": "Собери 175 капусты",
-  "chore.harvest.200.kale": "Собери 200 капусты",
+  "chore.harvest.175.kale": "Собери 175 Кале",
+  "chore.harvest.200.kale": "Собери 200 Кале",
   "chore.cook.15.honey.cake": "Приготовь 15 Медовых тортов",
   "chore.cook.20.honey.cake": "Приготовь 20 Медовых тортов",
   "chore.cook.3.parsnip.cake": "Приготовь 3 торта с пастернаком",
@@ -4043,34 +4043,34 @@
   "animal.notEnoughFood": "Недостаточно еды",
   "feeder.foodTypes.food": "Еда",
   "feeder.foodTypes.medicine": "Медицина",
-  "animal.noMedicine": "Лекарства нет",
-  "description.craftingBox": "Коробка для изготовления различных предметов.",
-  "description.basicBed": "Простая кровать, здесь может спать одна фермерская рука.",
+  "animal.noMedicine": "Лекарств нет",
+  "description.craftingBox": "Верстак для изготовления различных предметов.",
+  "description.basicBed": "Простая кровать, здесь может спать одна фермер.",
   "description.sturdyBed": "Прочная кровать, здесь может спать один фермер.",
-  "description.floralBed": "Цветочная клумба, здесь может спать одна рука фермера.",
+  "description.floralBed": "Цветочная клумба, здесь может спать один фермер.",
   "description.fisherBed": "Ложе для рыбака, здесь может спать один фермер.",
   "description.pirateBed": "Пиратская кровать, здесь может спать один фермер.",
   "description.cowBed": "Коровья кровать, здесь может спать один фермер.",
   "description.desertBed": "Кровать в пустыне, здесь может спать один фермер.",
   "description.royalBed": "Королевская кровать, здесь может спать один фермер.",
   "craftingBox.newRecipeDiscovered": "Обнаружен новый рецепт!",
-  "craftingBox.craftThisItem": "Изготовьте этот предмет в коробке для рукоделия.",
+  "craftingBox.craftThisItem": "Изготовьте этот предмет на верстаке.",
   "quest.marine.marvel": "Поймайте каждое постоянное морское чудо",
   "mix.ten": "Смешайте 10",
   "description.bullRunBanner": "Баннер, посвященный сезону Bull Run.",
   "description.cowSkull": "Древний череп.",
   "description.horseshoe": "Ценная подкова — обмен на награды!",
   "crafting.coming.soon": "Новая система крафта появится в Sunflower Land... 1 ноября!",
-  "season.codex.howToEarn.two": "Выполните работу по дому для Бампкинса.",
+  "season.codex.howToEarn.two": "Выполните работу по дому для Бампкинсов.",
   "season.codex.howToEarn.three": "Торгуйте наградами за животных и цветы!",
   "description.el.pollo.veloz.one": "Ваши цыплята будут откладывать яйца на 2 часа быстрее!",
   "description.el.pollo.veloz.two": "Быстро дайте мне эти яйца! Цыплята спят на 2 часа короче.",
-  "unlock.farmhand": "Разблокируйте Farmhand",
+  "unlock.farmhand": "Разблокируйте дополнительного помощника",
   "description.unlockFarmhand": "Это {{name}} позволит вам найти нового фермера, который поможет вам на ферме.",
   "bedsMigration.bedsNeeded": "Нужны кровати!",
   "bedsMigration.bedsNeededDescription": "Работникам фермы нужны кровати для работы на ферме.",
   "bedsMigration.bedsNeededDescription2": "Разместите кровати, чтобы нанять больше фермеров!",
-  "farmHand": "Фермерская рука",
+  "farmHand": "Помощник",
   "description.petting.hand": "Домашние животные. Используйте это, чтобы выразить привязанность к своим животным.",
   "description.brush": "Щетка для животных. Используйте ее, чтобы выразить любовь к своим животным.",
   "description.music.box": "Играет музыку для животных. Используйте это, чтобы выразить любовь к своим животным.",
@@ -4101,8 +4101,8 @@
   "description.sheafOfPlenty": "Пучок ячменя, собранный в пик спелости, символизирует изобилие и тяжелую работу сезона. +2 Ячмень",
   "description.mechanicalBull": "Оживленный аттракцион и испытание на выносливость! Садитесь на механического быка и посмотрите, сможете ли вы удержаться.",
   "description.dreamScarf.boost": "-20% времени производства овец",
-  "description.cowboyHat.boost": "+1 «Подкова» от поставок",
-  "description.cowboyShirt.boost": "+1 «Подкова» от Bounties",
+  "description.cowboyHat.boost": "+1 Подкова от Доставок",
+  "description.cowboyShirt.boost": "+1 Подкова от Bounties",
   "description.cowboyTrouser.boost": "+1 Подкова из серии Chores",
   "description.milkApron.boost": "+0,5 Молоко",
   "description.sheafOfPlenty.boost": "+2 Ячмень",
@@ -4112,9 +4112,9 @@
   "halloween.portal.description": "Сможете ли вы удержаться в лабиринте?",
   "halloween.portal.missionObjectives": "Миссия: достичь {{targetScore}}.",
   "halloween.portal.rewardMessage": "Поздравляем, вы выполнили задание! Вот ваша награда.",
-  "craftingBox.welcome.1": "Добро пожаловать в коробку для рукоделия! Здесь вы можете создавать предметы, используя свои ресурсы.",
-  "craftingBox.welcome.2": "Вставьте предметы в коробку для рукоделия, чтобы попробовать новые рецепты. Если вы найдете рецепт, он будет сохранен в разделе Рецепты!",
-  "craftingBox.welcome.3": "Пора заняться крафтом! Чем бы ты хотел заняться?",
+  "craftingBox.welcome.1": "Добро пожаловать! Здесь вы можете создавать предметы, используя свои ресурсы.",
+  "craftingBox.welcome.2": "Положите предметы на верстак, чтобы попробовать создать что то новое. Если вы найдете рецепт, он будет сохранен в разделе Рецепты!",
+  "craftingBox.welcome.3": "Пора заняться крафтом! Что бы ты хотел смастерить?",
   "craftingBox.startCrafting": "Начните крафтинг",
   "craftingBox.viewRecipes": "Смотреть рецепты",
   "craftingBoxGuide.selectResource": "Выберите ресурсы для создания.",
@@ -4129,16 +4129,16 @@
   "description.merinoJumper": "Этот уютный джемпер, изготовленный из высококачественной шерсти, обеспечивает непревзойденное тепло и комфорт. +1 шерсть мериноса",
   "description.mooVer": "Уникальное устройство, поддерживающее активность и здоровье коров. +0.25 Кожа",
   "description.swissWhiskers": "Этот опытный шеф-повар, настоящий кулинарный гений в миниатюре, доводит до совершенства каждый рецепт сыра своим экспертным подходом. +500 Cheese Recipe XP",
-  "description.cluckulator": "Эти специальные весы точно взвешивают каждую курицу, гарантируя, что она получит идеальную порцию корма для сбалансированного роста и здоровья, а также повышая эффективность и экологичность ухода за птицей. -25% Корма курице",
+  "description.cluckulator": "Эти специальные весы точно взвешивают каждую курицу, гарантируя, что она получит идеальную порцию корма для сбалансированного роста и здоровья, а также повышая эффективность и экологичность ухода за птицей. -25% при кормежке куриц",
   "description.ufo": "Говорят, что этот внеземной корабль излучает мягкое свечение и гул, создавая ауру удивления и любопытства. Не спускайте глаз с неба — кто знает, какие потусторонние тайны оно может раскрыть!",
-  "description.infernalBullwhip.boost": "-50% корма для коровника",
+  "description.infernalBullwhip.boost": "-50% корма при кормежке животных в коровнике",
   "description.chickenSuit.boost": "+1 Перо",
   "description.cowbellNecklace.boost": "+2 Молоко",
   "description.blackSheepOnesie.boost": "+2 Шерсть",
   "description.merinoJumper.boost": "+1 мериносовая шерсть",
   "description.mooVer.boost": "+0.25 Кожа",
-  "description.swissWhiskers.boost": "+500 рецептов сыра XP",
-  "description.cluckulator.boost": "-25% корма для курицы",
+  "description.swissWhiskers.boost": "+500 опыта в сыре",
+  "description.cluckulator.boost": "-25% корма для куриц",
   "chores.ended": "Все это время я говорю Бампкинсу, что делать... Я устала. Думаю, мне нужен отпуск.",
   "digby.closed": "Пустыня закрыта",
   "digby.holiday": "Сегодня пустыня закрыта. Возвращайтесь позже.",
@@ -4158,7 +4158,7 @@
   "chickens.deprecated.2": "Продавайте существующих цыплят в Garbo.",
   "description.blackSheep": "На вашей ферме поселилась черная овца.",
   "mailbox.whatsOn": "Что происходит",
-  "whatsOn.bullRunBegins": "Бег быков начинается!",
+  "whatsOn.bullRunBegins": "Сезон Бег быков начинается!",
   "whatsOn.animalsAndCrafting": "Животные и рукоделие",
   "whatsOn.theRaceBegins": "Гонка начинается",
   "whatsOn.sflMarketplace": "Торговая площадка SFL",
@@ -4167,14 +4167,14 @@
   "whatsOn.mysterySeason": "Мистический сезон",
   "whatsOn.bullRunText": "Сезон бега быков начинается! Возьмите свой VIP-баннер и приготовьтесь к гонке.",
   "whatsOn.cowSkullsText": "В пустыне появились коровьи черепа и новые головоломки!",
-  "whatsOn.choreBoardText": "Теперь доступна новая 7-дневная доска по рутинной работе.",
+  "whatsOn.choreBoardText": "Теперь доступна новая 7-дневная доска по заданиям на ферме.",
   "whatsOn.poppyShopText": "Цветочный магазин Поппи обновлен.",
   "whatsOn.animalsLiveText": "Теперь животные живы! Кормите их, дойте, стригите и многое другое!",
-  "whatsOn.craftingBoxText": "Теперь вы можете построить ящик для рукоделия и изготовить новые предметы!",
-  "whatsOn.bedsText": "Создайте 8 кроватей, чтобы разблокировать дополнительные руки на ферме.",
+  "whatsOn.craftingBoxText": "Теперь вы можете построить Верстак и изготовить новые предметы!",
+  "whatsOn.bedsText": "Создайте 8 кроватей, чтобы разблокировать дополнительных помощников на ферме.",
   "whatsOn.horseshoesText": "Выполняйте доставку, выполняйте работу по дому и получайте награды, чтобы заработать подковы.",
   "whatsOn.megastoreText": "Обменяйте подковы на NFT в Megastore или выиграйте их в аукционном доме",
-  "whatsOn.sflMarketplaceText": "Торговая площадка $SFL уже запущена! Обменяйте доллары SFL на NFT.",
+  "whatsOn.sflMarketplaceText": "Торговая площадка $SFL уже запущена! Обменянивайте SFL на NFT.",
   "whatsOn.auctionText": "Соревнуйтесь и предлагайте своим друзьям лучшие NFT!",
   "whatsOn.animalCompetitionText": "Выполняйте задания с животными и поднимайтесь в таблице лидеров, чтобы выиграть призы и доллары SFL!",
   "whatsOn.mysterySeasonText": "Подготовьте свои ресурсы и освойте рынок. Наступает сезон загадок!",
@@ -4186,11 +4186,11 @@
   "whatsOn.date.dec18Jan31": "18 декабря — 31 января",
   "whatsOn.date.feb1": "1 февраля",
   "description.whiteSheepOnesie.boost": "+0.25 Шерсть",
-  "description.whiteSheepOnesie": "Уютно устроитесь в этом пушистом шерстяном комбинезоне, который идеально подходит для уютного вечера или веселого дня на площади! Благодаря своему неотразимому шарму, вы станете самой симпатичной овцей в стаде. Шерсть 0,25+",
+  "description.whiteSheepOnesie": "Уютно устроитесь в этом пушистом шерстяном комбинезоне, который идеально подходит для уютного вечера или веселого дня на площади! Благодаря своему неотразимому шарму, вы станете самой симпатичной овцей в стаде. Шерсть +0.25",
   "time.millisecond.full": "миллисекунда",
   "time.milliseconds.full": "миллисекунд",
-  "time.ms.med": "мс",
-  "time.mss.med": "масса",
+  "time.ms.med": " мс",
+  "time.mss.med": " мс",
   "time.millisecond.short": "мс",
   "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} назад",
   "megaStore.tier.rare.requirements": "Купите 4 основных предмета, чтобы разблокировать редкие предметы.",
