[FEAT] Whats on updates

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4187,7 +4187,8 @@
   "whatsOn.animalsLiveText": "Animals are now live! Feed them, milk them, shear them and more!",
   "whatsOn.craftingBoxText": "You can now build a crafting box and craft new items!",
   "whatsOn.bedsText": "Craft the 8 beds to unlock extra farm hands.",
-  "whatsOn.horseshoesText": "Complete deliveries, chores & bounties to earn horseshoes.",
+  "whatsOn.horseshoesText": "Complete deliveries to earn horseshoes.",
+  "whatsOn.choresText": "Complete chores & bounties to earn horseshoes (Nov 11th)",
   "whatsOn.megastoreText": "Trade horseshoes for NFTs at the Megastore or win them at the Auction House",
   "whatsOn.sflMarketplaceText": "The $SFL marketplace is now live! Trade $SFL for NFTs.",
   "whatsOn.auctionText": "Compete and outbid your friends for the best NFTs!",
@@ -4195,9 +4196,9 @@
   "whatsOn.mysterySeasonText": "Prepare your resources & master the marketplace. The mystery season is coming!",
   "whatsOn.date.nov1": "November 1st",
   "whatsOn.date.nov4": "November 4th",
-  "whatsOn.date.nov6Dec11": "November 6th - Dec 11th",
+  "whatsOn.date.nov6Dec11": "November 6th - Dec 9th",
   "whatsOn.date.dec2": "December 2nd",
-  "whatsOn.date.dec11Dec18": "December 11th - Dec 18th",
+  "whatsOn.date.dec11Dec18": "December 9th - Dec 16th",
   "whatsOn.date.dec18Jan31": "December 18th - Jan 31st",
   "whatsOn.date.feb1": "February 1st",
   "chickens.deprecated.1": "Chickens are now fed in the hen house.",
