--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4209,5 +4209,8 @@
   "animals.guide.sleeping": "After levelling up your animal will sleep for 24 hours.",
   "animals.guide.affection": "Show affection to sleeping animals when they request it.",
   "animals.guide.bounties": "Complete weekly bounties by trading your animals for rewards..",
-  "animals.guide.sickness": "Beware of sickness! Older animals are more susceptible - use Barn Delight medicine to cure them."
+  "animals.guide.sickness": "Beware of sickness! Older animals are more susceptible - use Barn Delight medicine to cure them.",
+  "description.alien.chicken": "A peculiar chicken from another galaxy, here to boost your feather production!",
+  "description.toxic.tuft": "A mutated sheep whose toxic fleece produces the finest merino wool in the land!",
+  "description.mootant": "This genetically enhanced bovine here to boost your leather production!"
 }
