[FEAT] Remove quick select UI from animals

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3768,7 +3768,7 @@
   "2x.rewards": "2x Rewards",
   "quickSelect.animalFeed": "Prepare some animal feed.",
   "wakesIn": "Wakes in:",
-  "animal.noFoodMessage": "No food available",
+  "animal.noFoodMessage": "No food selected",
   "levelUp": "Level Up!",
   "unknown": "Unknown",
   "crafting.selectIngredients": "Select ingredients",
