--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3736,6 +3736,7 @@
   "description.nutribarley": "Barley-based nutritional supplement or feed.",
   "description.mixed.grain": "Mixed grains or seeds for feeding or planting.",
   "description.barn.delight": "A magical elixir that cures animal sickness.",
+  "description.omnifeed": "Acts as the best feed for all animals.",
   "upgrade.building": "Upgrade {{building}}",
   "upgrade.intro": "Hey there bumpkin, looking to upgrade your {{building}} so you can get yourself some more {{animals}}?",
   "upgrade": "Upgrade",
