[FEAT] Stella updates (#4687)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3114,8 +3114,8 @@
   "season.codex.intro": "Earn {{ticket}}s to craft exclusive collectibles & wearables for your farm in this limited season...Hurry before time runs out!",
   "season.codex.howToEarn": "How to earn {{ticket}}s?",
   "season.codex.howToEarn.one": "Visit the plaza & deliver resources to Bumpkins.",
-  "season.codex.howToEarn.two": "Complete chores for Bumpkins.",
-  "season.codex.howToEarn.three": "Trade animal and flower bounties!",
+  "season.codex.howToEarn.two": "Complete chores for Bumpkins. (Nov 11th)",
+  "season.codex.howToEarn.three": "Trade animal and flower bounties! (Nov 11th)",
   "season.codex.nextDrop": "Next Drop",
   "season.codex.nextDrop.available": "{{dropSupply}} available",
   "season.codex.seasonalDrops": "Seasonal Drops",
@@ -4067,6 +4067,7 @@
   "megaStore.msg1": "Welcome to my seasonal store. Gather resources & exchange them for rare items before time runs out!",
   "megaStore.tier.rare.requirements": "Buy 4 basic items to unlock rare items.",
   "megaStore.tier.epic.requirements": "Buy 4 rare items to unlock epic items.",
+  "megaStore.tier.mega.requirements": "Buy 4 epic items to unlock mega items.",
   "animal.notEnoughFood": "Not enough food available",
   "feeder.foodTypes.food": "Food",
   "feeder.foodTypes.medicine": "Medicine",
@@ -4124,9 +4125,9 @@
   "description.sheafOfPlenty": "A bundle of barley harvested at peak ripeness, symbolizing abundance and the hard work of the season. +2 Barley",
   "description.mechanicalBull": "A lively attraction and test of endurance! Hop on the Mechanical Bull and see if you can hold on.",
   "description.dreamScarf.boost": "-20% Sheep Production Time",
-  "description.cowboyHat.boost": " +1 Horseshoe from Deliveries",
-  "description.cowboyShirt.boost": " +1 Horseshoe from Bounties",
-  "description.cowboyTrouser.boost": " +1 Horseshoe from Chores",
+  "description.cowboyHat.boost": " +1 Horseshoes",
+  "description.cowboyShirt.boost": " +1 Horseshoes",
+  "description.cowboyTrouser.boost": " +1 Horseshoes",
   "description.milkApron.boost": "+0.5 Milk",
   "description.sheafOfPlenty.boost": "+2 Barley",
   "restrictionReason.sheepSleeping": "Sheep are sleeping",
@@ -4171,7 +4172,7 @@
   "delivery.holiday": "Locked",
   "delivery.holiday.closingSoon": "These Bumpkins are going on a holiday...Complete your orders before they leave!",
   "delivery.holiday.closed": "These Bumpkins are on holiday...Come back later!",
-  "season.codex.howToEarn.comingSoon": "Chores, deliveries and bounties will begin on the 6th of November!",
+  "season.codex.howToEarn.comingSoon": "Earn horseshoes from chores, deliveries and bounties!",
   "mailbox.whatsOn": "What's on",
   "whatsOn.bullRunBegins": "Bull Run Begins!",
   "whatsOn.animalsAndCrafting": "Animals & Crafting",
@@ -4212,5 +4213,6 @@
   "animals.guide.sickness": "Beware of sickness! Older animals are more susceptible - use Barn Delight medicine to cure them.",
   "description.alien.chicken": "A peculiar chicken from another galaxy, here to boost your feather production!",
   "description.toxic.tuft": "A mutated sheep whose toxic fleece produces the finest merino wool in the land!",
-  "description.mootant": "This genetically enhanced bovine here to boost your leather production!"
+  "description.mootant": "This genetically enhanced bovine here to boost your leather production!",
+  "description.cropCircle": "A mysterious circle that appears on your farm...what could it mean?"
 }
