[FEAT] Fix typos

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4096,8 +4096,8 @@
   "bedsMigration.bedsNeededDescription2": "Place beds to hire more farmhands!",
   "farmHand": "Farm Hand",
   "description.petting.hand": "Pets animals. Use this to show affection to your animals.",
-  "description.brush": "Animal Brush. Use this to show affection your animals.",
-  "description.music.box": "Plays music to animals. Use this to show affection your animals.",
+  "description.brush": "Animal Brush. Use this to show affection to your animals.",
+  "description.music.box": "Plays music to animals. Use this to show affection to your animals.",
   "animal.toolRequired": "{{tool}} Required",
   "easterEgg.halloweenBook": "?????",
   "easterEgg.halloweenBookText": "There are places older than time itself, and others where the light doesn't shine. You shouldn't be here. In this forest, the trees whisper secrets of forgotten times and shadows lurk everywhere, patiently waiting for a chance to devour any source of light that dares to shine. There's no place for adventurers or the curious like you around here...",
