[CHORE] Update some Birdie's texts for Bull Run Season (#4667)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -133,7 +133,7 @@
   "birdieplaza.howToEarnTickets": "{{seasonalTicket}}s?",
   "birdieplaza.earnTicketsVariety": "You can earn {{seasonalTicket}} in a variety of ways.",
   "birdieplaza.commonMethod": "The most common method to earn {{seasonalTicket}}s is by gathering resources or collecting other requested items, and then delivering them to Bumpkins in the Plaza and some other areas.",
-  "birdieplaza.choresAndRewards": "You can also earn {{seasonalTicket}}s by completing chores for Hank, claiming daily chest rewards and competing in the faction competition!",
+  "birdieplaza.choresAndRewards": "You can also earn {{seasonalTicket}}s by weekly chores, daily chest rewards, Bert's Odd Obsession and bounty system!",
   "birdieplaza.gatherAndCraft": "Gather enough {{seasonalTicket}}s and you will be able to buy some rare items like I did.",
   "birdieplaza.newSeasonIntro": "Every 3 months a new season is introduced at Sunflower Land.",
   "birdieplaza.seasonQuests": "This season has exciting quests, rare collectibles and exclusive wearables you can earn.",
